added editPerson to PersonService added changeuserLogin to UserService added method Update to TeacherController

--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Security\BaseSecurity.cs" />
     <Compile Include="Security\NotificationSecurity.cs" />
     <Compile Include="Security\PrivateMessageSecurity.cs" />
+    <Compile Include="Security\UserSecurity.cs" />
     <Compile Include="Services\Master\ApplicationService.cs" />
     <Compile Include="Services\Master\CategoryService.cs" />
     <Compile Include="Services\Master\DistrictService.cs" />
