--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Services\School\ClassPeriodServiceTest.cs" />
     <Compile Include="Services\School\ClassServiceTest.cs" />
     <Compile Include="Services\School\CourseServiceTest.cs" />
+    <Compile Include="Services\School\DisciplineTypeServiceTest.cs" />
     <Compile Include="Services\School\FinalGradeServiceTest.cs" />
     <Compile Include="Services\School\GradingStyleMappingTest.cs" />
     <Compile Include="Services\School\GradingStyleServiceTest.cs" />
