--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DataAccess\ApplicationInstallDataAccess.cs" />
     <Compile Include="DataAccess\AttendanceReasonDataAccess.cs" />
     <Compile Include="DataAccess\ClassAttendanceDataAccess.cs" />
+    <Compile Include="DataAccess\DisciplineTypeDataAccess.cs" />
     <Compile Include="DataAccess\FinalGradeAnnouncementTypeDataAccess.cs" />
     <Compile Include="DataAccess\FinalGradeDataAccess.cs" />
     <Compile Include="DataAccess\GradingStyleDataAccess.cs" />
