--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -15,11 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    
     <add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=chalkablemaster;UID=sa;Pwd=qwerty" />
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=.;Initial Catalog=chalkableschool;UID=sa;Pwd=qwerty" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
-  
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -35,8 +33,7 @@
         <add namespace="Chalkable.Web.Extensions" />
       </namespaces>
     </pages>
-    <membership defaultProvider="ChalkableMembershipProvider" userIsOnlineTimeWindow="15">
-    </membership>
+    <membership defaultProvider="ChalkableMembershipProvider" userIsOnlineTimeWindow="15"></membership>
     <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
@@ -51,11 +48,17 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10">
     <Servers>
       <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
-  
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
