--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
+  <repository path="..\WindowsAzure.Acs.Oauth2\packages.config" />
 </repositories>
