--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -128,14 +128,15 @@
     <Compile Include="Authentication\ChalkableIdentity.cs" />
     <Compile Include="Authentication\ChalkablePrincipal.cs" />
     <Compile Include="Controllers\AnnouncementAttachmentController.cs" />
-    <Compile Include="Controllers\AnnouncementCalendarController.cs" />
+    <Compile Include="Controllers\CalendarControllers\AnnouncementCalendarController.cs" />
     <Compile Include="Controllers\AnnouncementController.cs" />
     <Compile Include="Controllers\AnnouncementQnAController.cs" />
     <Compile Include="Controllers\AnnouncementReminderController.cs" />
     <Compile Include="Controllers\AnnouncementTypeController.cs" />
     <Compile Include="Controllers\BackgroundTaskController.cs" />
     <Compile Include="Controllers\BaseAnnouncementController.cs" />
-    <Compile Include="Controllers\CalendarController.cs" />
+    <Compile Include="Controllers\CalendarControllers\AttendanceCalendarController.cs" />
+    <Compile Include="Controllers\CalendarControllers\CalendarController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ChalkableController.cs" />
     <Compile Include="ActionResults\ChalkableJsonResult.cs" />
@@ -182,11 +183,13 @@
     <Compile Include="Models\BackgroundTaskViewData.cs" />
     <Compile Include="Models\Binders\DateTimeBinder.cs" />
     <Compile Include="Models\CalendarsViewData\AnnouncementMonthCalendarViewData.cs" />
+    <Compile Include="Models\CalendarsViewData\AttendanceCalendarViewData.cs" />
     <Compile Include="Models\CalendarsViewData\MonthCalendarViewData.cs" />
     <Compile Include="Models\CategoryViewData.cs" />
     <Compile Include="Models\ChalkableDepartmentViewData.cs" />
     <Compile Include="Models\ClassesViewData\ClassInfoViewData.cs" />
     <Compile Include="Models\ClassesViewData\ClassViewData.cs" />
+    <Compile Include="Models\ClassPeriodViewData.cs" />
     <Compile Include="Models\CourseViewData.cs" />
     <Compile Include="Models\CreateAnnouncementViewData.cs" />
     <Compile Include="Models\DisciplineTypeViewData.cs" />
