fixed bg task logs, moved odata assembly to 5.5 version

--- a/Chalkable.BackgroundTaskProducer/app.config
+++ b/Chalkable.BackgroundTaskProducer/app.config
@@ -23,4 +23,12 @@
       <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
