--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -15,9 +15,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <!--<add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!" />-->
+    <add name="ChalkableMaster" connectionString="Data Source=(local);Initial Catalog=ChalkableNEW;UID=sa;Pwd=parol2010" />
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
