--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -310,6 +310,14 @@
       <Project>{c5753c2a-f2bc-4f96-846b-548fc67191b2}</Project>
       <Name>Chalkable.Data.School</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Chalkable.SisConnector\Chalkable.SisConnector.csproj">
+      <Project>{C6A26439-411D-4D8C-9BCE-1A34E7EE604F}</Project>
+      <Name>Chalkable.SisConnector</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Chalkable.SisImportFacade\Chalkable.SisImportFacade.csproj">
+      <Project>{BD404053-D827-4695-9F57-5003A337428C}</Project>
+      <Name>Chalkable.SisImportFacade</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_Layout.cshtml" />
