added DeveloperController added ListApi to DeveloperController

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\ClassController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DbMaintenanceController.cs" />
+    <Compile Include="Controllers\DeveloperController.cs" />
     <Compile Include="Controllers\DisciplineController.cs" />
     <Compile Include="Controllers\DisciplineTypeController.cs" />
     <Compile Include="Controllers\DistrictController.cs" />
@@ -187,6 +188,7 @@
     </Compile>
     <Compile Include="HtmlExtensions.cs" />
     <Compile Include="Logic\AttachmentLogic.cs" />
+    <Compile Include="Logic\ChalkableApiExplorerLogic.cs" />
     <Compile Include="Logic\ClassLogic.cs" />
     <Compile Include="Logic\GradingStyleLogic.cs" />
     <Compile Include="Logic\PersonLogic.cs" />
@@ -216,6 +218,12 @@
     <Compile Include="Models\CalendarsViewData\DisciplineCalendarViewData.cs" />
     <Compile Include="Models\CalendarsViewData\MonthCalendarViewData.cs" />
     <Compile Include="Models\CategoryViewData.cs" />
+    <Compile Include="Models\ChalkableApiExplorerViewData\ApiExplorerControllerViewData.cs" />
+    <Compile Include="Models\ChalkableApiExplorerViewData\ApiExplorerDropdownItemViewData.cs" />
+    <Compile Include="Models\ChalkableApiExplorerViewData\ApiExplorerMethodViewData.cs" />
+    <Compile Include="Models\ChalkableApiExplorerViewData\ApiExplorerViewData.cs" />
+    <Compile Include="Models\ChalkableApiExplorerViewData\ParamViewData.cs" />
+    <Compile Include="Models\ChalkableApiItemDescription.cs" />
     <Compile Include="Models\ChalkableDepartmentViewData.cs" />
     <Compile Include="Models\ClassAttendanceViewData.cs" />
     <Compile Include="Models\ClassesViewData\ClassGradingViewData.cs" />
